# unitree_simulation

./: README.md
controllers/aliengo_controller/: CMakeLists.txt  package.xml
controllers/aliengo_controller/launch/: robot_controller.launch  set_ctrl.launch
controllers/aliengo_controller/scripts/: robot_controller_gazebo.py
controllers/aliengo_controller/scripts/RobotController/: RobotController.py
controllers/aliengo_controller/scripts/RoboticsUtilities/: Transformations.py
descriptions/aliengo_description/: CMakeLists.txt
descriptions/aliengo_description/launch/: aliengo_rviz.launch
gazebos/a1_gazebo/launch/: simulation.launch
gazebos/aliengo_gazebo/: CMakeLists.txt  package.xml
gazebos/aliengo_gazebo/config/: aliengo_controllers.yaml
gazebos/aliengo_gazebo/launch/: normal.launch  simulation.launch
gazebos/aliengo_gazebo/world/: stairs.world
quadruped_unitree/launch/: a1_gazebo.launch  aliengo_gazebo.launch  go1_gazebo.launch
unitree_joystick/: CMakeLists.txt  package.xml
