<?xml version="1.0"?>
<package format="2">
  <name>aliengo_gazebo</name>
  <version>1.0.0</version>
  <description>Aliengo_gazebo package</description>

  <maintainer email="wessam.hamid@akirakan.com">wessam</maintainer>

  <license>AKK</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
